Updated get_pix() function
Added parameter pix_deg_conversion to allow general use of the function

--- a/Data_3112020.ipynb
+++ b/Data_3112020.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "id": "6a5fe704",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "64cb9e3e",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "5cbf3e7c",
    "metadata": {},
    "outputs": [
@@ -96,12 +96,13 @@
     }
    ],
    "source": [
-    "def get_pix(deg):\n",
+    "def get_pix(deg, pix_deg_conversion):\n",
     "    \"\"\"function takes a value in degrees and returns converted value in pixels\n",
     "    parameter: deg - int, initial value in degrees\n",
+    "    parameter: pix_deg_conversion - int, conversion ratio between pixels and degrees\n",
     "    returns: int, converted value in pixels\n",
     "    \"\"\"\n",
-    "    pix = (deg*(60**2))/4\n",
+    "    pix = deg*pix_deg_conversion\n",
     "    return pix\n",
     "\n",
     "#finding mean value for right acension\n",
@@ -114,13 +115,13 @@
     "x = [degree_ra_mean - data.kic_degree_ra]\n",
     "\n",
     "#converting x values from degrees to pixels\n",
-    "x_pix = [get_pix(i) for i in x]\n",
+    "x_pix = [get_pix(i, (60**2)/4) for i in x]\n",
     "\n",
     "#setting y to the difference of the declenation values from the mean\n",
     "y = [degree_dec_mean - data.kic_deg]\n",
     "\n",
     "#converting y values from degrees to pixels\n",
-    "y_pix = [get_pix(i) for i in y]\n",
+    "y_pix = [get_pix(i, (60**2)/4) for i in y]\n",
     "print(x_pix)"
    ]
   },
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "9867f016",
    "metadata": {},
    "outputs": [
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a3a634",
+   "id": "401e45d6",
    "metadata": {},
    "source": [
     "## Plotting data with scientific notation:"
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "4aa19c91",
    "metadata": {},
    "outputs": [
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c85208b4",
+   "id": "34cf5522",
    "metadata": {},
    "source": [
     "## Plotting x, y parametric t plot:"
@@ -254,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "0bbf47c9",
+   "execution_count": 8,
+   "id": "b3c9225c",
    "metadata": {
     "scrolled": false
    },
@@ -295,6 +296,14 @@
     "ax.ticklabel_format(useMathText=True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "216ade9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
